# visions

calibrate/: CHANGELOG.TXT  CMakeLists.txt  calibrate.cpp  common_code.cpp  common_code.hpp  test_common_code.cpp  undistort.cpp
calibrate/data/: elp.xml
cbg_process/: common_code.cpp  main.cpp
chroma_key/: CHANGELOG.TXT  CMakeLists.txt  chroma_key.cpp  common_code.cpp  common_code.hpp  main.cpp  test_common_code.cpp
color_balance/: CMakeLists.txt  REPORT_en.md  common_code.cpp
img_equalization/: CMakeLists.txt  clahe.cpp  clahe.hpp  common_code.cpp  common_code.hpp  img_equalization.cpp  test_common_code.cpp
pollen grain classification/: CHANGELOG.TXT  CMakeLists.txt  REPORT_en.md  classifiers.cpp  classifiers.hpp  command_line.txt  common_code.hpp  dataset.cpp  dataset.hpp  features.cpp  features.hpp  gray_levels_features.cpp  gray_levels_features.hpp  metrics.cpp  metrics.hpp  my_extractor.cpp  my_extractor.hpp  show_BAA500.cpp  test_clf.cpp  train_clf.cpp
pollen grain classification/data/: README.md  test.csv  test_predicted.csv  train.csv  valid.csv  valid_predicted.csv
sharpening/: CHANGELOG.TXT  CMakeLists.txt  common_code.cpp  common_code.hpp  sharpen.cpp  test_common_code.cpp
usm_enhance/: common_code.cpp
